--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=FastFoodDelivery
+
+
+# MongoDB Atlas Configuration
+spring.data.mongodb.uri=mongodb+srv://sa:123@fastfooddelivery.6qrfbuc.mongodb.net/FastFoodDelivery?retryWrites=true&w=majority&appName=FastFoodDelivery
+
+spring.data.mongodb.database=FastFoodDelivery
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb=DEBUG
+
+
+# Server Configuration
+server.port=8080
