--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.data.mongodb.database=FastFoodDelivery
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
 
+# Redis configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+
 
 # Server Configuration
 server.port=8080
