--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,6 +14,12 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=
 
+# Cloudinary Configuration
+cloudinary.cloud-name=deooamndi
+cloudinary.api-key=186558834811161
+cloudinary.api-secret=7iKsQDdlEz-vPTEYyuePBiET7Sw
+cloudinary.secure=true
+
 
 # Server Configuration
 server.port=8080
