--- a/server/src/test/resources/application.properties
+++ b/server/src/test/resources/application.properties
@@ -1,19 +1,19 @@
 # Test Configuration - Override main application.properties for testing
 spring.application.name=FastFoodDelivery
 
-# Use embedded MongoDB for tests (requires de.flapdoodle.embed.mongo dependency)
-# Or disable MongoDB auto-configuration for tests
+# Disable Redis and MongoDB auto-configuration for tests
 spring.autoconfigure.exclude=\
   org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration,\
-  org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
+  org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration,\
+  org.springframework.boot.autoconfigure.data.mongo.MongoAutoConfiguration,\
+  org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
 
-# Disable MongoDB for tests (if not using embedded MongoDB)
-# spring.data.mongodb.uri=
-spring.data.mongodb.auto-index-creation=false
-
-# Disable Redis for tests with valid default values
+# Provide dummy Redis properties to satisfy @Value injection
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# Provide dummy MongoDB URI
+spring.data.mongodb.uri=mongodb://localhost:27017/test
 
 # Server Configuration
 server.port=0
