--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -20,6 +20,11 @@ cloudinary.api-key=186558834811161
 cloudinary.api-secret=7iKsQDdlEz-vPTEYyuePBiET7Sw
 cloudinary.secure=true
 
+# File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
 
 # Server Configuration
 server.port=8080
